# ot-harjoitustyo-1

./: .gitignore  README.md
Laskarit/viikko2/: pyproject.toml
Laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
Laskarit/viikko2/unicafe/: .coverage
Laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
Laskarit/viikko3/: laajennettu-luokkakaavio.md  laajennettu-sekvenssikaava.md  sekvenssikaavio.md
bussitt-app/: .coveragerc  pyproject.toml  tasks.py
bussitt-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohjeet.md  tuntikirjanpito.md  vaatimusmaarittely.md
bussitt-app/src/: display.py  main.py  myutils.py  ui.py
bussitt-app/src/api/: api.py
bussitt-app/src/config/: args_handler.py  config.py
bussitt-app/src/my_recordings/: record_api.py  records.json
bussitt-app/src/myutils/: myutils.py
bussitt-app/src/saves/: record_api.py  records.json
bussitt-app/src/tests/: main_test.py  myutils_test.py  ui_test.py
bussitt-app/src/ui/: display.py  ui.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py
laskarit/viikko3/: luokkakaavio.md  pyproject.toml
laskarit/viikko3/src/: index.py
