[tool.poetry]
name = "bussitt-app"
version = "0.1.0"
description = "OhTe-2022 harjoitustyö @Helsingin yliopisto"
authors = ["sutigit <panyanilben@gmail.com>"]
readme = "README.md"
packages = [{include = "bussitt_app"}]

[tool.poetry.dependencies]
python = "^3.8"
inquirer = "^2.10.1"
pandas = "^1.5.1"
tabulate = "^0.9.0"
requests = "^2.28.1"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
