[tool.poetry]
name = "viikko3"
version = "0.1.0"
description = ""
authors = ["sutigit <panyanilben@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
